# osui

./: .gitignore  .sparkignore  Cargo.toml  README.md  benchmark.csv  build.rs  build.sh  styling.md
examples/: auth.rs  benchmark.rs  hello_world.rs  iter.rs  simple_benchmark.rs  simple_example.rs  tour.rs  velocity.rs
macros/: Cargo.toml
macros/src/: emit.rs  lib.rs  parse.rs
osui-element/: Cargo.toml  lib.rs
src/: app.c  app.rs  component.rs  components.rs  console.rs  css.rs  dependency.rs  element.rs  elements.rs  engine.rs  error.rs  event.rs  event_manager.rs  events.rs  examples.rs  frontend.rs  key.rs  lib.rs  macros.rs  main.rs  output.rs  render.rs  render_scope.rs  renderer.rs  rsx.rs  state.rs  style.rs  test.rs  text.rs  ui.rs  utils.rs  view_plugins.rs  widget.rs  widgets.rs
src/component/: context.rs  mod.rs  scope.rs
src/component/components/: flex.rs
src/demos/: mod.rs
src/element/: input.rs  mod.rs  rect.rs  text.rs
src/elements/: div.rs  flex.rs  grid.rs  heading.rs  input.rs  mod.rs  paginator.rs  scroll.rs  shape.rs  state.rs  velocity_handler.rs
src/elements/flex/: column.rs  mod.rs  row.rs
src/engine/: benchmark.rs  commands.rs  console.rs  mod.rs  simple_benchmark.rs
src/extensions/: focus.rs  id.rs  input_handling.rs  keypress.rs  mod.rs  resources.rs  tick.rs  tick_rate.rs  velocity.rs
src/hooks/: mod.rs  state.rs
src/state/: effect.rs  mod.rs  mount.rs
src/test/: mod.rs
src/ui/: elements.rs  mod.rs  styles.rs
