[package]
name = "osui"
version = "0.0.8-alpha.2"
edition = "2021"
license = "Apache-2.0"
description = "A TUI library for advanced uis"
repository = "https://github.com/osui-rs/osui"
homepage = "https://osui.netlify.app"
documentation = "https://osui.netlify.app/docs/" 

[lib]
name = "osui"
path = "src/lib.rs"

[[bin]]
name = "osui"
path = "src/main.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
crossterm = "0.28.1"
dyn-clone = "1.0.17"
osui-element = "0.1.23"

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
opt-level = "z"
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
codegen-units = 1
