[package]
name = "osui"
version = "0.0.9-alpha.0"
edition = "2021"
license = "Apache-2.0"
description = "A TUI library for advanced uis"
repository = "https://github.com/osui-rs/osui"
homepage = "https://osui.netlify.app"
documentation = "https://osui.netlify.app/docs/" 

[features]
no_rsx = []
no_elem = []

[lib]
name = "osui"
path = "src/lib.rs"

[[bin]]
name = "osui"
path = "src/main.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
crossterm = "0.28.1"
downcast-rs = "2.0.1"

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
opt-level = "z"
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
codegen-units = 1
