[package]
name = "osui"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "A TUI library for advanced uis"
repository = "https://github.com/osui-rs/osui"
homepage = "https://osui.netlify.app"
documentation = "https://osui.netlify.app/docs/"

[features]
rsx = []

[lib]
name = "osui"
path = "src/lib.rs"

[[bin]]
name = "osui"
path = "src/main.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
access-cell = "0.1.3"
crossterm = "0.28.1"
figlet-rs = "0.1.5"
osui-macros = { path = "macros" }

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
opt-level = "z"
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
codegen-units = 1

[workspace]
members = [".", "macros"]
